# GBemu

./: CMakeLists.txt  README.md  main.c
GBemu/: CMakeLists.txt  main.c
include/: common.h  cpu.h  dma.h  emu.h  gamepad.h  instruction.h  io.h  lcd.h  ppu.h  ram.h  stack.h  timer.h  ui.h
lib/: CMakeLists.txt  bus.c  cart.c  cpu.c  cpu_fetch_data.c  cpu_proc.c  cpu_regs.c  dma.c  emu.c  gamepad.c  instruction.c  interrupts.c  io.c  lcd.c  ppu.c  ppu_fifo.c  ppu_render.c  ram.c  stack.c  timer.c  ui.c
